# qubership-envgene

./: .gitattributes  .gitignore  .gitleaks.toml  .shellcheckrc  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  composite-structure.yml  file_to_append_time_to  pyrightconfig.json  shade-file.yml  test.py.lprof
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.githooks/: commit-msg
.github/: dependabot.yml  pull_request_template.md  release-drafter-config.yml  super-linter.env
.qubership/: grand-report.json
build_effective_set_generator/: .gitignore  Dockerfile  README.md
build_effective_set_generator_java/: Dockerfile
build_gcip/: OPTIMIZATION_REPORT.md
dependencies/: tests_requirements.txt
devtools/: docker-compose.yml  readme.md
docs/: README.md  ansible-replacement.md  application-manifest-build-cli.md  application-manifest.md  calculator-cli.md  env-instance-generation.md  envgene-configs.md  envgene-objects.md  envgene-pipelines.md  envgene-repository-variables.md  environment-operational-service-openapi-v2.yaml  environment-operational-service-openapi.yaml  error-catalog.md  error-handling-guide.md  glossary.md  sbom.md  (+5 more)
python/artifact-searcher/: README.md  pyproject.toml
python/artifact-searcher/artifact_searcher/: artifact.py  auth_resolver.py  cloud_auth_helper.py  test_artifact.py  test_auth_resolver.py
python/artifact-searcher/artifact_searcher/utils/: constants.py  models.py
python/artifact-searcher/tests/: __init__.py  test_cloud_auth_helper.py  test_models_v2.py  test_version_routing.py
(+686 files in other folders)
